<resources>
    <string name="app_name">Lugares</string>
    <string name="lbl_Longitud">Longitud</string>
    <string name="lbl_latitud">Latitud</string>
    <string name="lbl_descripcion">Descripción</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="hint_nombre">Agrega un nombre para el lugar</string>
    <string name="hint_descripcion">Un lugar muy bonito...</string>
    <string name="lbl_anadir">Añadir</string>
    <string name="action_delete">Borrar</string>
    <string name="action_update">Actualizar</string>
    <string name="action_edit">Editar</string>
    <string name="action_guardar">Guardar</string>
    <string name="Loc_Lat">Localizacion (Lat/Long):</string>
</resources>
